force-app/main/default/objects/Contract_Terms__c/Contract_Terms__c.object-meta.xml
<CustomObject>
    <label>CPQ - Contract Product Verbiage</label>
    <nameField>
        <label>Contract Product Verbiage</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CPQ - Contract Product Verbiage</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>