force-app/main/default/objects/Contract_Terms__c/fields/Terms_and_Conditions_RTF__c.field-meta.xml
<CustomField>
    <fullName>Terms_and_Conditions_RTF__c</fullName>
    <description>iContract requires the Rich Text Format for language, but it&apos;s very hard to convert the type of a field in use...</description>
    <inlineHelpText>iContract requires the Rich Text Format for language, but it&apos;s very hard to convert the type of a field in use...</inlineHelpText>
    <label>Terms and Conditions RTF</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>