force-app/main/default/objects/Contract_Terms__c/fields/Version_History__c.field-meta.xml
<CustomField>
    <fullName>Version_History__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Version History</label>
    <referenceTo>Version_History__c</referenceTo>
    <relationshipLabel>CPQ - Contract Product Verbiage</relationshipLabel>
    <relationshipName>CPQ_Contract_Product_Verbiage</relationshipName>
    <type>Lookup</type>
</CustomField>