force-app/main/default/objects/Contract_Terms__c/listViews/All_Active.listView-meta.xml
<ListView>
    <fullName>All_Active</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>notContain</operation>
        <value>&quot;x &quot;</value>
    </filters>
    <label>All Active</label>
    <language>en_US</language>
</ListView>