force-app/main/default/objects/Contract_Terms__c/listViews/All_Contract_Terms.listView-meta.xml
<ListView>
    <fullName>All_Contract_Terms</fullName>
    <columns>NAME</columns>
    <columns>CURRENCY_ISO_CODE</columns>
    <columns>CREATED_DATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Language__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>