force-app/main/default/objects/Contract_Terms__c/listViews/All_Inactive.listView-meta.xml
<ListView>
    <fullName>All_Inactive</fullName>
    <columns>NAME</columns>
    <columns>CURRENCY_ISO_CODE</columns>
    <columns>CREATED_DATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>startsWith</operation>
        <value>X</value>
    </filters>
    <label>All Inactive</label>
    <language>en_US</language>
</ListView>